--- a/Portafolio/css/style.css
+++ b/Portafolio/css/style.css
@@ -10,6 +10,7 @@ body {
 }
 
 .container {
+    height: 100px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -87,13 +88,14 @@ main h1 {
 }
 
 .btn-curriculum {
+    box-sizing: border-box;
     background-color: #FF5F45;
     padding: 10px 30px;
     display: flex;
     justify-content: center;
     align-items: center;
     border-radius: 15px;
-
+    box-sizing: border-box;
 }
 
 .btn-curriculum p {
@@ -105,8 +107,9 @@ main h1 {
 }
 
 .presentacion .btn-proyectos {
+    box-sizing: border-box;
     background-color: transparent;
-    padding: 10px 48px;
+    padding: 0px 60px 0px 60px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -123,11 +126,18 @@ main h1 {
 .btn {
     margin: 25px 0px 0px 0px;
     display: flex;
-    width: 500px;
+    width: 470px;
     justify-content: space-between;
 }
 
-.btn-curriculum:hover {
-    transition: 0.2s;
-    opacity: 0.7;
+
+.presentacion .btn-proyectos:hover {
+    background-color: #FF5F45;
+    border: 2px solid #FF5F45 ;
+}
+
+.presentacion .btn-curriculum:hover {
+    padding: 8px 27px;
+    background-color: #001123;
+    border: 2px solid white;
 }
